--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
           <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
 
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0 me-3">
               <li class="nav-item">
                 <a class="nav-link" href="">Contact</a>
               </li>
