--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
   </head>
 
   <body>
+
+    <!-- Title Section  -->
+
     <section id="title">
 
       <div class="container-fluid">
@@ -58,14 +61,14 @@
           <div class="col-lg-6">
 
             <h1>Meet new and interesting dogs nearby.</h1>
-            <button type="button" class="btn btn-dark btn-lg"><i class="fab fa-apple"></i>  Download</button>
-            <button type="button" class="btn btn-outline-light btn-lg"><i class="fab fa-google-play"></i>  Download</button>
+            <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i>  Download</button>
+            <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i>  Download</button>
 
           </div>
 
           <div class="col-lg-6">
 
-            <img src="images/iphone6.png" alt="iphone-mockup">
+            <img class="title-image" src="images/iphone6.png" alt="iphone-mockup">
 
           </div>
 
@@ -79,17 +82,37 @@
     <!-- Features -->
 
     <section id="features">
-      <div>
-        <h3>Easy to use.</h3>
-        <p>So easy to use, even your dog could do it.</p>
-      </div>
-      <div>
-        <h3>Elite Clientele.</h3>
-        <p>We have all the dogs, the greatest dogs.</p>
-      </div>
-      <div>
-        <h3>Guaranteed to work.</h3>
-        <p>Find the love of your dog's life or your money back.</p>
+
+      <div class="container-fluid">
+
+        <div class="row">
+
+          <div class="col-md-4 colomn-features">
+
+            <i class="fas fa-check-circle"></i>
+            <h3>Easy to use.</h3>
+            <p>So easy to use, even your dog could do it.</p>
+
+          </div>
+
+          <div class="col-md-4 colomn-features">
+
+            <i class="fas fa-bullseye"></i>
+            <h3>Elite Clientele.</h3>
+            <p>We have all the dogs, the greatest dogs.</p>
+
+          </div>
+
+          <div class="col-md-4 colomn-features">
+
+            <i class="fas fa-heart"></i>
+            <h3>Guaranteed to work.</h3>
+            <p>Find the love of your dog's life or your money back.</p>
+
+          </div>
+
+        </div>
+
       </div>
 
     </section>
