--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <title>TinDog</title>
 
-
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;900&family=Ubuntu:wght@300;400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,400;0,700;0,900;1,100;1,400&family=Ubuntu:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
 
     <!-- CSS Stylesheets -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
+
 
     <!-- Fonts Awesome -->
     <script src="https://kit.fontawesome.com/5ec9e8e413.js" crossorigin="anonymous"></script>
@@ -83,34 +83,24 @@
 
     <section id="features">
 
-      <div class="container-fluid">
+      <div class="row">
 
-        <div class="row">
+        <div class="features-box col-lg-4">
+          <i class="icon fas fa-check-circle fa-4x"></i>
+          <h3>Easy to use.</h3>
+          <p>So easy to use, even your dog could do it.</p>
+        </div>
 
-          <div class="col-md-4 colomn-features">
+        <div class="features-box col-lg-4">
+          <i class="icon fas fa-bullseye fa-4x"></i>
+          <h3>Elite Clientele.</h3>
+          <p>We have all the dogs, the greatest dogs.</p>
+        </div>
 
-            <i class="fas fa-check-circle"></i>
-            <h3>Easy to use.</h3>
-            <p>So easy to use, even your dog could do it.</p>
-
-          </div>
-
-          <div class="col-md-4 colomn-features">
-
-            <i class="fas fa-bullseye"></i>
-            <h3>Elite Clientele.</h3>
-            <p>We have all the dogs, the greatest dogs.</p>
-
-          </div>
-
-          <div class="col-md-4 colomn-features">
-
-            <i class="fas fa-heart"></i>
-            <h3>Guaranteed to work.</h3>
-            <p>Find the love of your dog's life or your money back.</p>
-
-          </div>
-
+        <div class="features-box col-lg-4">
+          <i class="icon fas fa-heart fa-4x"></i>
+          <h3>Guaranteed to work.</h3>
+          <p>Find the love of your dog's life or your money back.</p>
         </div>
 
       </div>
