--- a/index.html
+++ b/index.html
@@ -111,30 +111,40 @@
     <!-- Testimonials -->
 
     <section id="testimonials">
-      <div>
-        <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
-        <img class="testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
-        <em>Pebbles, New York</em>
+      <div id="testimonials-carousel" class="carousel slide" data-bs-ride="false">
 
-        <!-- <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
-        <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
-        <em>Beverly, Illinois</em> -->
-      </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
+            <img class="testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
+            <em>Pebbles, New York</em>
+          </div>
+          <div class="carousel-item">
+            <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
+            <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
+            <em>Beverly, Illinois</em>
+          </div>
 
+          <button class="carousel-control-prev" type="button" data-bs-target="#testimonials-carousel" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#testimonials-carousel" data-bs-slide="next">
+            <span class="carousel-control-next-icon"></span>
+          </button>
+
+        </div>
     </section>
 
 
     <!-- Press -->
 
     <section id="press">
-
       <div>
         <img class="press-logo" src="images/TechCrunch.png" alt="techcrunch-logo">
         <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
         <img class="press-logo" src="images/bizinsider.png" alt="bizinsider-logo">
         <img class="press-logo" src="images/mashable.png" alt="mashable-logo">
       </div>
-
     </section>
 
 
