--- a/index.html
+++ b/index.html
@@ -85,19 +85,19 @@
 
       <div class="row">
 
-        <div class="features-box col-lg-4">
+        <div class="features-box col-lg-4 col-md-6">
           <i class="icon fas fa-check-circle fa-4x"></i>
           <h3>Easy to use.</h3>
           <p>So easy to use, even your dog could do it.</p>
         </div>
 
-        <div class="features-box col-lg-4">
+        <div class="features-box col-lg-4 col-md-6">
           <i class="icon fas fa-bullseye fa-4x"></i>
           <h3>Elite Clientele.</h3>
           <p>We have all the dogs, the greatest dogs.</p>
         </div>
 
-        <div class="features-box col-lg-4">
+        <div class="features-box col-lg-4 col-md-6">
           <i class="icon fas fa-heart fa-4x"></i>
           <h3>Guaranteed to work.</h3>
           <p>Find the love of your dog's life or your money back.</p>
@@ -157,7 +157,7 @@
 
       <div class="row">
 
-        <div class="col-lg-4">
+        <div class="col-lg-4 col-md-6">
           <div class="card">
             <div class="card-header">
               <h3>Chihuahua</h3>
@@ -172,7 +172,7 @@
           </div>
         </div>
 
-        <div class="col-lg-4">
+        <div class="col-lg-4 col-md-6">
           <div class="card">
             <div class="card-header">
               <h3>Labrador</h3>
@@ -187,7 +187,7 @@
           </div>
         </div>
 
-        <div class="col-lg-4">
+        <div class="col-lg-4 col-md-6">
           <div class="card">
             <div class="card-header">
               <h3>Mastiff</h3>
