--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
       <div class="row">
 
-        <div class="col-lg-4 col-md-6">
+        <div class="pricing-column col-lg-4 col-md-6">
           <div class="card">
             <div class="card-header">
               <h3>Chihuahua</h3>
@@ -167,12 +167,14 @@
               <p>5 Matches Per Day</p>
               <p>10 Messages Per Day</p>
               <p>Unlimited App Usage</p>
-              <button type="button">Sign Up</button>
+              <div class="pricing-button d-grid mx-auto">
+                <button type="button" class="btn btn-lg btn-outline-dark">Sign Up</button>
+              </div>
             </div>
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6">
+        <div class="pricing-column col-lg-4 col-md-6">
           <div class="card">
             <div class="card-header">
               <h3>Labrador</h3>
@@ -182,12 +184,14 @@
               <p>Pirority Listing</p>
               <p>Unlimited Matches</p>
               <p>Unlimited App Usage</p>
-              <button type="button">Sign Up</button>
+              <div class="pricing-button d-grid mx-auto">
+                <button type="button" class="btn btn-lg btn-dark">Sign Up</button>
+              </div>
             </div>
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6">
+        <div class="pricing-column col-lg-4 col-md-6">
           <div class="card">
             <div class="card-header">
               <h3>Mastiff</h3>
@@ -198,11 +202,12 @@
               <p>Unlimited Matches</p>
               <p>Unlimited Matches</p>
               <p>Unlimited App Usage</p>
-              <button type="button">Sign Up</button>
+              <div class="pricing-button d-grid mx-auto">
+                <button type="button" class="btn btn-lg btn-dark">Sign Up</button>
+              </div>
             </div>
           </div>
         </div>
-
       </div>
     </section>
 
