--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
     <!-- Title Section  -->
 
     <section id="title">
-
-      <div class="container-fluid">
+      <!-- <div class="container-fluid"> -->
 
         <!-- Nav Bar -->
 
@@ -36,7 +35,6 @@
           </button>
 
           <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0 me-3">
               <li class="nav-item">
                 <a class="nav-link" href="">Contact</a>
@@ -48,7 +46,6 @@
                 <a class="nav-link" href="">Download</a>
               </li>
             </ul>
-
           </div>
 
         </nav>
@@ -57,32 +54,24 @@
         <!-- Title -->
 
         <div class="row">
-
-          <div class="col-lg-6">
-
+          <div class="col-lg-6 col-md-3">
             <h1>Meet new and interesting dogs nearby.</h1>
             <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i>  Download</button>
             <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i>  Download</button>
-
           </div>
 
-          <div class="col-lg-6">
-
+          <div class="col-lg-6 col-md-3">
             <img class="title-image" src="images/iphone6.png" alt="iphone-mockup">
-
           </div>
-
         </div>
 
       </div>
-
     </section>
 
 
     <!-- Features -->
 
     <section id="features">
-
       <div class="row">
 
         <div class="features-box col-lg-4">
@@ -101,11 +90,9 @@
           <i class="icon fas fa-heart fa-4x"></i>
           <h3>Guaranteed to work.</h3>
           <p>Find the love of your dog's life or your money back.</p>
-
         </div>
 
-      </div>
-
+      <!-- </div> -->
     </section>
 
 
