--- a/index.html
+++ b/index.html
@@ -54,18 +54,18 @@
         <!-- Title -->
 
         <div class="row">
-          <div class="col-lg-6 col-md-3">
+          <div class="col-lg-6">
             <h1>Meet new and interesting dogs nearby.</h1>
             <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i>  Download</button>
             <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i>  Download</button>
           </div>
 
-          <div class="col-lg-6 col-md-3">
+          <div class="col-lg-6">
             <img class="title-image" src="images/iphone6.png" alt="iphone-mockup">
           </div>
         </div>
 
-      </div>
+      <!-- </div> -->
     </section>
 
 
@@ -92,7 +92,7 @@
           <p>Find the love of your dog's life or your money back.</p>
         </div>
 
-      <!-- </div> -->
+      </div>
     </section>
 
 
