--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Title Section  -->
 
     <section id="title">
-      <!-- <div class="container-fluid"> -->
+      <div class="container-fluid">
 
         <!-- Nav Bar -->
 
@@ -65,7 +65,7 @@
           </div>
         </div>
 
-      <!-- </div> -->
+      </div>
     </section>
 
 
