--- a/index.html
+++ b/index.html
@@ -23,16 +23,17 @@
     <!-- Title Section  -->
 
     <section id="title">
-      <div class="container-fluid">
+
 
         <!-- Nav Bar -->
 
         <nav class="navbar navbar-expand-lg navbar-dark">
+          <div class="container-fluid">
 
-          <a class="navbar-brand" href="">tindog</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
+            <a class="navbar-brand" href="#">Navbar</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
           <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0 me-3">
@@ -47,12 +48,12 @@
               </li>
             </ul>
           </div>
+        </div>
 
         </nav>
 
-
         <!-- Title -->
-
+<div class="container-fluid">
         <div class="row">
           <div class="col-lg-6">
             <h1>Meet new and interesting dogs nearby.</h1>
