--- a/index.html
+++ b/index.html
@@ -24,49 +24,44 @@
 
     <section id="title">
 
-
-        <!-- Nav Bar -->
-
-        <nav class="navbar navbar-expand-lg navbar-dark">
+      <!-- Nav Bar -->
+      <nav class="navbar navbar-expand-lg navbar-dark">
           <div class="container-fluid">
+              <a class="navbar-brand" href="#">TinDog</a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                      <span class="navbar-toggler-icon"></span>
+                  </button>
 
-            <a class="navbar-brand" href="#">Navbar</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-          <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0 me-3">
-              <li class="nav-item">
-                <a class="nav-link" href="">Contact</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="">Pricing</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="">Download</a>
-              </li>
-            </ul>
+              <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                  <ul class="navbar-nav ms-auto mb-2 mb-lg-0 me-3">
+                      <li class="nav-item">
+                          <a class="nav-link" href="">Contact</a>
+                      </li>
+                      <li class="nav-item">
+                          <a class="nav-link" href="">Pricing</a>
+                      </li>
+                      <li class="nav-item">
+                          <a class="nav-link" href="">Download</a>
+                      </li>
+                  </ul>
+              </div>
           </div>
-        </div>
-
-        </nav>
-
+      </nav>
         <!-- Title -->
-<div class="container-fluid">
+      <div class="container-fluid">
         <div class="row">
-          <div class="col-lg-6">
+          <div class="col-lg-6 col-md-3">
             <h1>Meet new and interesting dogs nearby.</h1>
-            <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i>  Download</button>
-            <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i>  Download</button>
+            <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
+            <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button>
           </div>
 
-          <div class="col-lg-6">
+          <div class="col-lg-6 col-md-3">
             <img class="title-image" src="images/iphone6.png" alt="iphone-mockup">
           </div>
         </div>
-
       </div>
+
     </section>
 
 
