--- a/index.html
+++ b/index.html
@@ -13,26 +13,27 @@
     <link rel="stylesheet" href="css/styles.css">
 
 
+
     <!-- Fonts Awesome -->
-    <script src="https://kit.fontawesome.com/5ec9e8e413.js" crossorigin="anonymous"></script>
+    <!-- <script src="https://kit.fontawesome.com/5ec9e8e413.js" crossorigin="anonymous"></script> -->
 
   </head>
 
   <body>
 
     <!-- Title Section  -->
-
     <section id="title">
-
+    <div class="container-fluid">
       <!-- Nav Bar -->
       <nav class="navbar navbar-expand-lg navbar-dark">
-          <div class="container-fluid">
-              <a class="navbar-brand" href="#">TinDog</a>
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-                      <span class="navbar-toggler-icon"></span>
-                  </button>
+
+            <a class="navbar-brand" href="">tindog</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+              </button>
 
               <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+
                   <ul class="navbar-nav ms-auto mb-2 mb-lg-0 me-3">
                       <li class="nav-item">
                           <a class="nav-link" href="">Contact</a>
@@ -45,21 +46,22 @@
                       </li>
                   </ul>
               </div>
-          </div>
       </nav>
-        <!-- Title -->
-      <div class="container-fluid">
+
+      <!-- Title -->
+
         <div class="row">
-          <div class="col-lg-6 col-md-3">
+          <div class="col-lg-6">
             <h1>Meet new and interesting dogs nearby.</h1>
             <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
             <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button>
           </div>
 
-          <div class="col-lg-6 col-md-3">
+          <div class="col-lg-6">
             <img class="title-image" src="images/iphone6.png" alt="iphone-mockup">
           </div>
         </div>
+        
       </div>
 
     </section>
@@ -215,6 +217,7 @@
     </section>
 
     <!-- Bootstrap Scripts -->
+    <script src="https://kit.fontawesome.com/5ec9e8e413.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
