--- a/index.html
+++ b/index.html
@@ -199,11 +199,11 @@
     <!-- Call to Action -->
 
     <section id="cta">
-
-      <h3>Find the True Love of Your Dog's Life Today.</h3>
-      <button type="button">Download</button>
-      <button type="button">Download</button>
-
+      <div class="cta-item">
+        <h3>Find the True Love of Your Dog's Life Today.</h3>
+        <button type="button">Download</button>
+        <button type="button">Download</button>
+      </div>
     </section>
 
     <!-- Footer -->
