Add code to cta section

--- a/index.html
+++ b/index.html
@@ -200,9 +200,11 @@
 
     <section id="cta">
       <div class="cta-item">
-        <h3>Find the True Love of Your Dog's Life Today.</h3>
-        <button type="button">Download</button>
-        <button type="button">Download</button>
+        <h1>Find the True Love of Your Dog's Life Today.</h1>
+        <div class="cta-button">
+          <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i>Download</button>
+          <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i>Download</button>
+        </div>
       </div>
     </section>
 
