Add code to cta section

--- a/index.html
+++ b/index.html
@@ -200,12 +200,10 @@
 
     <section id="cta">
       <div class="cta-item">
-        <h1>Find the True Love of Your Dog's Life Today.</h1>
-        <div class="cta-button">
-          <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i>Download</button>
-          <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i>Download</button>
-        </div>
-      </div>
+        <h3>Find the True Love of Your Dog's Life Today.</h3>
+        <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple cta-icon"></i>Download</button>
+        <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play cta-icon"></i>Download</button>
+    </div>
     </section>
 
     <!-- Footer -->
