Add code to footer section

--- a/index.html
+++ b/index.html
@@ -209,9 +209,15 @@
     <!-- Footer -->
 
     <section id="footer">
-
-      <p>© Copyright 2021 TinDog</p>
-
+      <div class="footer-items">
+        <div class="footer-icon">
+          <i class="fab fa-twitter"></i>
+          <i class="fab fa-facebook-square"></i>
+          <i class="fab fa-instagram"></i>
+          <i class="fas fa-envelope"></i>
+        </div>
+        <p>© Copyright 2021 TinDog</p>
+      </div>
     </section>
 
 
