Add code to footer section

--- a/index.html
+++ b/index.html
@@ -210,12 +210,10 @@
 
     <section id="footer">
       <div class="footer-items">
-        <div class="footer-icon">
-          <i class="fab fa-twitter"></i>
-          <i class="fab fa-facebook-square"></i>
-          <i class="fab fa-instagram"></i>
-          <i class="fas fa-envelope"></i>
-        </div>
+        <i class="fab fa-twitter icon-footer"></i>
+        <i class="fab fa-facebook-square icon-footer"></i>
+        <i class="fab fa-instagram icon-footer"></i>
+        <i class="fas fa-envelope icon-footer"></i>
         <p>© Copyright 2021 TinDog</p>
       </div>
     </section>
