--- a/index.html
+++ b/index.html
@@ -199,11 +199,9 @@
     <!-- Call to Action -->
 
     <section id="cta">
-      <div class="cta-item">
-        <h3>Find the True Love of Your Dog's Life Today.</h3>
-        <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple cta-icon"></i>Download</button>
-        <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play cta-icon"></i>Download</button>
-    </div>
+      <h3 class="cta-heading">Find the True Love of Your Dog's Life Today.</h3>
+      <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple cta-icon"></i>Download</button>
+      <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play cta-icon"></i>Download</button>
     </section>
 
     <!-- Footer -->
