--- a/index.html
+++ b/index.html
@@ -15,13 +15,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,400;0,700;0,900;1,100;1,400&family=Ubuntu:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
 
-
     <title>TinDog</title>
-
   </head>
 
   <body>
-
     <!-- Title Section  -->
     <section id="title">
       <div class="container-fluid">
@@ -51,7 +48,7 @@
 
         <div class="row">
           <div class="col-lg-6">
-            <h1>Meet new and interesting dogs nearby.</h1>
+            <h1 class="big-heading">Meet new and interesting dogs nearby.</h1>
             <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
             <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button>
           </div>
@@ -61,9 +58,7 @@
         </div>
 
       </div>
-
     </section>
-
 
     <!-- Features -->
 
